src/TucodeParser.java
// Generated from Tucode.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TucodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, OPERATOR_NOT=6, OPERATOR_AND=7, 
		OPERATOR_OR=8, OPERATOR_EQU=9, OPERATOR_DIFF=10, OPERATOR_GRT=11, OPERATOR_LOT=12, 
		OPERATOR_GRE=13, OPERATOR_LOE=14, OPERATOR_NEG=15, OPERATOR_MULT=16, OPERATOR_DIV=17, 
		OPERATOR_ADD=18, OPERATOR_SUB=19, L_PARENTHESIS=20, R_PARENTHESIS=21, 
		L_BRACE=22, R_BRACE=23, DELIMITER=24, COMMA=25, DEF_FUNC=26, FUNC_LEN=27, 
		FUNC_PRINT=28, FUNC_PRINTLN=29, FUNC_MAIN=30, FUNC_POW=31, FUNC_ISPOSITIVE=32, 
		FUNC_ABS=33, FUNC_UPPERCASE=34, FUNC_LOWERCASE=35, FUNC_NOD=36, FUNC_ISEMPTY=37, 
		FUNC_TOINT=38, FUNC_ISDIGIT=39, RETURN=40, IF=41, ELSE=42, OPERATOR_ASSIG=43, 
		INLINE_COMMENT=44, WS=45, MULTILINE_COMMENT=46, WHILE=47, FOR=48, LOOP=49, 
		DO=50, ID=51, CHARACTER=52, STRING=53, INTEGER=54, BOOLEAN=55;
	public static final int
		RULE_expression = 0, RULE_element = 1, RULE_literal = 2, RULE_id_decl = 3, 
		RULE_var_decl = 4, RULE_for_var_decl = 5, RULE_var_assign = 6, RULE_for_var_assign = 7, 
		RULE_data_type = 8, RULE_type_int = 9, RULE_type_char = 10, RULE_type_bool = 11, 
		RULE_type_string = 12, RULE_result = 13, RULE_sentence = 14, RULE_if_conditional = 15, 
		RULE_params = 16, RULE_param = 17, RULE_arguments = 18, RULE_argument = 19, 
		RULE_block = 20, RULE_function_def = 21, RULE_function_defined = 22, RULE_length_def = 23, 
		RULE_power_def = 24, RULE_println_def = 25, RULE_print_def = 26, RULE_isPositive_def = 27, 
		RULE_abs_def = 28, RULE_uppercase_def = 29, RULE_lowercase_def = 30, RULE_nod_def = 31, 
		RULE_isEmpty_def = 32, RULE_toInt_def = 33, RULE_isDigit_def = 34, RULE_while_def = 35, 
		RULE_dowhile_def = 36, RULE_for_def = 37, RULE_loop_def = 38, RULE_user_function_defined = 39, 
		RULE_main_def = 40, RULE_program = 41;
	public static final String[] ruleNames = {
		"expression", "element", "literal", "id_decl", "var_decl", "for_var_decl", 
		"var_assign", "for_var_assign", "data_type", "type_int", "type_char", 
		"type_bool", "type_string", "result", "sentence", "if_conditional", "params", 
		"param", "arguments", "argument", "block", "function_def", "function_defined", 
		"length_def", "power_def", "println_def", "print_def", "isPositive_def", 
		"abs_def", "uppercase_def", "lowercase_def", "nod_def", "isEmpty_def", 
		"toInt_def", "isDigit_def", "while_def", "dowhile_def", "for_def", "loop_def", 
		"user_function_defined", "main_def", "program"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'numero'", "'simbolo'", "'booleano'", "'texto'", "';'", "'!'", 
		"'y'", "'o'", "'=='", "'!='", "'>'", "'<'", "'<='", "'>='", null, "'*'", 
		"'/'", "'+'", null, "'('", "')'", "'{'", "'}'", "'\n'", "','", "'definir'", 
		"'largo'", "'imprimir'", "'imprimirln'", "'numero comienzo'", "'potencia'", 
		"'esPositivo'", "'absoluto'", "'mayuscula'", "'minuscula'", "'cantidadDigitos'", 
		"'esVacio'", "'aEntero'", "'esDigito'", "'devolver'", "'si'", "'sino'", 
		"'='", null, null, null, "'mientras'", "'para'", "'repetir'", "'hacer'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, "OPERATOR_NOT", "OPERATOR_AND", "OPERATOR_OR", 
		"OPERATOR_EQU", "OPERATOR_DIFF", "OPERATOR_GRT", "OPERATOR_LOT", "OPERATOR_GRE", 
		"OPERATOR_LOE", "OPERATOR_NEG", "OPERATOR_MULT", "OPERATOR_DIV", "OPERATOR_ADD", 
		"OPERATOR_SUB", "L_PARENTHESIS", "R_PARENTHESIS", "L_BRACE", "R_BRACE", 
		"DELIMITER", "COMMA", "DEF_FUNC", "FUNC_LEN", "FUNC_PRINT", "FUNC_PRINTLN", 
		"FUNC_MAIN", "FUNC_POW", "FUNC_ISPOSITIVE", "FUNC_ABS", "FUNC_UPPERCASE", 
		"FUNC_LOWERCASE", "FUNC_NOD", "FUNC_ISEMPTY", "FUNC_TOINT", "FUNC_ISDIGIT", 
		"RETURN", "IF", "ELSE", "OPERATOR_ASSIG", "INLINE_COMMENT", "WS", "MULTILINE_COMMENT", 
		"WHILE", "FOR", "LOOP", "DO", "ID", "CHARACTER", "STRING", "INTEGER", 
		"BOOLEAN"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tucode.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TucodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpressionContext extends ParserRuleContext {
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public TerminalNode OPERATOR_NOT() { return getToken(TucodeParser.OPERATOR_NOT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode OPERATOR_MULT() { return getToken(TucodeParser.OPERATOR_MULT, 0); }
		public TerminalNode OPERATOR_DIV() { return getToken(TucodeParser.OPERATOR_DIV, 0); }
		public TerminalNode OPERATOR_ADD() { return getToken(TucodeParser.OPERATOR_ADD, 0); }
		public TerminalNode OPERATOR_NEG() { return getToken(TucodeParser.OPERATOR_NEG, 0); }
		public TerminalNode OPERATOR_GRT() { return getToken(TucodeParser.OPERATOR_GRT, 0); }
		public TerminalNode OPERATOR_LOT() { return getToken(TucodeParser.OPERATOR_LOT, 0); }
		public TerminalNode OPERATOR_GRE() { return getToken(TucodeParser.OPERATOR_GRE, 0); }
		public TerminalNode OPERATOR_LOE() { return getToken(TucodeParser.OPERATOR_LOE, 0); }
		public TerminalNode OPERATOR_EQU() { return getToken(TucodeParser.OPERATOR_EQU, 0); }
		public TerminalNode OPERATOR_DIFF() { return getToken(TucodeParser.OPERATOR_DIFF, 0); }
		public TerminalNode OPERATOR_AND() { return getToken(TucodeParser.OPERATOR_AND, 0); }
		public TerminalNode OPERATOR_OR() { return getToken(TucodeParser.OPERATOR_OR, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TucodeVisitor) return ((TucodeVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			switch (_input.LA(1)) {
			case FUNC_LEN:
			case FUNC_PRINT:
			case FUNC_PRINTLN:
			case FUNC_POW:
			case FUNC_ISPOSITIVE:
			case FUNC_ABS:
			case FUNC_UPPERCASE:
			case FUNC_LOWERCASE:
			case FUNC_NOD:
			case FUNC_ISEMPTY:
			case FUNC_TOINT:
			case FUNC_ISDIGIT:
			case ID:
			case CHARACTER:
			case STRING:
			case INTEGER:
			case BOOLEAN:
				{
				setState(85);
				element();
				}
				break;
			case OPERATOR_NOT:
				{
				setState(86);
				match(OPERATOR_NOT);
				setState(87);
				element();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(105);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(90);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(91);
						_la = _input.LA(1);
						if ( !(_la==OPERATOR_MULT || _la==OPERATOR_DIV) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						setState(92);
						expression(7);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(93);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(94);
						_la = _input.LA(1);
						if ( !(_la==OPERATOR_NEG || _la==OPERATOR_ADD) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						setState(95);
						expression(6);
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(96);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(97);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPERATOR_EQU) | (1L << OPERATOR_DIFF) | (1L << OPERATOR_GRT) | (1L << OPERATOR_LOT) | (1L << OPERATOR_GRE) | (1L << OPERATOR_LOE))) != 0)) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						setState(98);
						expression(5);
						}
						break;
					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(99);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(100);
						match(OPERATOR_AND);
						setState(101);
						expression(3);
						}
						break;
					case 5:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(102);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(103);
						match(OPERATOR_OR);
						setState(104);
						expression(2);
						}
						break;
					}
					} 
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public Function_definedContext function_defined() {
			return getRuleContext(Function_definedContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).exitElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TucodeVisitor ) return ((TucodeVisitor<? extends T>)visitor).visitElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		try {
			setState(112);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				function_defined();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				literal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(TucodeParser.INTEGER, 0); }
		public TerminalNode CHARACTER() { return getToken(TucodeParser.CHARACTER, 0); }
		public TerminalNode BOOLEAN() { return getToken(TucodeParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(TucodeParser.STRING, 0); }
		public TerminalNode ID() { return getToken(TucodeParser.ID, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).exitLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TucodeVisitor ) return ((TucodeVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << CHARACTER) | (1L << STRING) | (1L << INTEGER) | (1L << BOOLEAN))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_declContext extends ParserRuleContext {
		public Data_typeContext data_type() {
			return getRuleContext(Data_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(TucodeParser.ID, 0); }
		public Id_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).enterId_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).exitId_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TucodeVisitor ) return ((TucodeVisitor<? extends T>)visitor).visitId_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Id_declContext id_decl() throws RecognitionException {
		Id_declContext _localctx = new Id_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_id_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			data_type();
			setState(117);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public Id_declContext id_decl() {
			return getRuleContext(Id_declContext.class,0);
		}
		public TerminalNode OPERATOR_ASSIG() { return getToken(TucodeParser.OPERATOR_ASSIG, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DELIMITER() { return getToken(TucodeParser.DELIMITER, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).exitVar_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TucodeVisitor ) return ((TucodeVisitor<? extends T>)visitor).visitVar_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			id_decl();
			setState(120);
			match(OPERATOR_ASSIG);
			setState(121);
			expression(0);
			setState(122);
			match(DELIMITER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_var_declContext extends ParserRuleContext {
		public Id_declContext id_decl() {
			return getRuleContext(Id_declContext.class,0);
		}
		public TerminalNode OPERATOR_ASSIG() { return getToken(TucodeParser.OPERATOR_ASSIG, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public For_var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).enterFor_var_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).exitFor_var_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TucodeVisitor ) return ((TucodeVisitor<? extends T>)visitor).visitFor_var_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final For_var_declContext for_var_decl() throws RecognitionException {
		For_var_declContext _localctx = new For_var_declContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_for_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			id_decl();
			setState(125);
			match(OPERATOR_ASSIG);
			setState(126);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_assignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TucodeParser.ID, 0); }
		public TerminalNode OPERATOR_ASSIG() { return getToken(TucodeParser.OPERATOR_ASSIG, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DELIMITER() { return getToken(TucodeParser.DELIMITER, 0); }
		public Var_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).enterVar_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).exitVar_assign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TucodeVisitor ) return ((TucodeVisitor<? extends T>)visitor).visitVar_assign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_assignContext var_assign() throws RecognitionException {
		Var_assignContext _localctx = new Var_assignContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_var_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(ID);
			setState(129);
			match(OPERATOR_ASSIG);
			setState(130);
			expression(0);
			setState(131);
			match(DELIMITER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_var_assignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TucodeParser.ID, 0); }
		public TerminalNode OPERATOR_ASSIG() { return getToken(TucodeParser.OPERATOR_ASSIG, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public For_var_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_var_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).enterFor_var_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).exitFor_var_assign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TucodeVisitor ) return ((TucodeVisitor<? extends T>)visitor).visitFor_var_assign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final For_var_assignContext for_var_assign() throws RecognitionException {
		For_var_assignContext _localctx = new For_var_assignContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_for_var_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(ID);
			setState(134);
			match(OPERATOR_ASSIG);
			setState(135);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_typeContext extends ParserRuleContext {
		public Type_intContext type_int() {
			return getRuleContext(Type_intContext.class,0);
		}
		public Type_charContext type_char() {
			return getRuleContext(Type_charContext.class,0);
		}
		public Type_boolContext type_bool() {
			return getRuleContext(Type_boolContext.class,0);
		}
		public Type_stringContext type_string() {
			return getRuleContext(Type_stringContext.class,0);
		}
		public Data_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).enterData_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TucodeListener ) ((TucodeListener)listener).exitData_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TucodeVisitor ) return ((TucodeVisitor<? extends T>)visitor).visitData_type(this);
			else return visitor.visitChildren(this);
		}
	}
